ensure consistency of alignment, icons, colors and tooltips in item actions across interfaces

--- a/app/src/styles/mixins/_list-interface.scss
+++ b/app/src/styles/mixins/_list-interface.scss
@@ -15,6 +15,41 @@
 	}
 }
 
+@mixin list-interface-item-actions($item-link: false) {
+	display: flex;
+	align-items: center;
+	gap: 4px;
+
+	.v-icon {
+		--v-icon-color: var(--theme--form--field--input--foreground-subdued);
+
+		&:hover {
+			::v-deep([data-icon="close"]),
+			::v-deep([data-icon="delete"]),
+			::v-deep([data-icon="settings_backup_restore"]) {
+				color: var(--theme--danger);
+			}
+		}
+	}
+
+	@if $item-link {
+		.item-link {
+			.v-icon {
+				transition: color var(--fast) var(--transition);
+			}
+
+			&:hover .v-icon {
+				color: var(--theme--form--field--input--foreground);
+			}
+
+			&.disabled {
+				pointer-events: none;
+				visibility: hidden;
+			}
+		}
+	}
+}
+
 @mixin list-interface-actions($pagination: false) {
 	margin-top: 12px;
 	display: flex;
